--- a/LISy/LISy/LISy.csproj
+++ b/LISy/LISy/LISy.csproj
@@ -86,12 +86,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Entities\Copy.cs" />
     <Compile Include="Entities\Document.cs" />
-    <Compile Include="Entities\Documents\Takable Docs\AVMaterial.cs" />
-    <Compile Include="Entities\Documents\Takable Docs\Book.cs" />
-    <Compile Include="Entities\Documents\Inner Docs\JournalArticle.cs" />
-    <Compile Include="Entities\Documents\Takable.cs" />
+    <Compile Include="Entities\Documents\AVMaterial.cs" />
+    <Compile Include="Entities\Documents\Book.cs" />
+    <Compile Include="Entities\Documents\JournalArticle.cs" />
     <Compile Include="Entities\IDocument.cs" />
     <Compile Include="Entities\Image.cs" />
     <Compile Include="Entities\IUser.cs" />
@@ -156,7 +154,6 @@
       <DependentUpon>Database.mdf</DependentUpon>
     </Content>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
