--- a/LISy/LISy/LISy.csproj
+++ b/LISy/LISy/LISy.csproj
@@ -86,12 +86,13 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Entities\Copy.cs" />
     <Compile Include="Entities\Document.cs" />
     <Compile Include="Entities\Documents\AVMaterial.cs" />
     <Compile Include="Entities\Documents\Book.cs" />
     <Compile Include="Entities\Documents\JournalArticle.cs" />
+    <Compile Include="Entities\Documents\Takable.cs" />
     <Compile Include="Entities\IDocument.cs" />
-    <Compile Include="Entities\Image.cs" />
     <Compile Include="Entities\IUser.cs" />
     <Compile Include="Entities\Users\Librarian.cs" />
     <Compile Include="Entities\Users\Patron.cs" />
