--- a/LISy/LISy/LISy.csproj
+++ b/LISy/LISy/LISy.csproj
@@ -78,6 +78,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Entities\Users\ILibrarian.cs" />
+    <Compile Include="Entities\Users\IPatron.cs" />
+    <Compile Include="Managers\DataManagers\DocumentsDataManager.cs" />
+    <Compile Include="Managers\DataManagers\UsersDataManager.cs" />
     <Compile Include="RegisterWindow.xaml.cs">
       <DependentUpon>RegisterWindow.xaml</DependentUpon>
     </Compile>
@@ -123,7 +127,7 @@
   <ItemGroup>
     <Compile Include="Managers\DataManager.cs" />
     <Compile Include="Managers\ILibrarianDataManager.cs" />
-    <Compile Include="Managers\IPatronDataManager.cs" />
+    <Compile Include="Managers\IUsersDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
