--- a/LISy/LISy/LISy.csproj
+++ b/LISy/LISy/LISy.csproj
@@ -163,13 +163,6 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Database.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Database_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>Database.mdf</DependentUpon>
-    </Content>
     <Resource Include="Design\books.jpg" />
     <Resource Include="Design\library_2.jpg" />
     <Resource Include="Design\books_shelf_back.jpg" />
@@ -177,7 +170,15 @@
     <Resource Include="Design\image_title_white.png" />
     <Resource Include="Design\sing_up_window_back.jpg" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Design\White_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Design\title_white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Design\search_icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
