--- a/LISy/LISy/App.config
+++ b/LISy/LISy/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="LibraryDB" connectionString="Server=lisy.database.windows.net;Database=LISy;User Id=librarian;Password=nairarbil0#;"/>
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
