--- a/LISy/LISy/LISy.csproj
+++ b/LISy/LISy/LISy.csproj
@@ -94,6 +94,9 @@
     <Compile Include="Managers\DataManagers\UsersDataManager.cs" />
     <Compile Include="Managers\InputFieldsManager.cs" />
     <Compile Include="Managers\LibrarianDataManager.cs" />
+    <Compile Include="Profile.xaml.cs">
+      <DependentUpon>Profile.xaml</DependentUpon>
+    </Compile>
     <Compile Include="RegisterWindow.xaml.cs">
       <DependentUpon>RegisterWindow.xaml</DependentUpon>
     </Compile>
@@ -131,6 +134,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Profile.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="RegisterWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -201,6 +208,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Design\Strang.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Design\CA.jpg" />
+    <Resource Include="Design\introduction-to-algorithms.jpg" />
+    <Resource Include="Design\Rye_catcher.jpg" />
+    <Resource Include="Design\wheels.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
