--- a/LISy/LISyTest/LISyTest.csproj
+++ b/LISy/LISyTest/LISyTest.csproj
@@ -56,9 +56,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\UserTest.cs" />
+    <Compile Include="Integrated\IntegratedTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
