Добавил пользователю дата гриды со всеми документами теперь осталость написать что при нажатие на док появляется у него окошко бронить эту книжку Потом добавил добавление библиотекаря только окошоко потому что не нашел ни каких конструкторов Добавил копии для посмотра для библиотекаря, но без их изменений И еще кажется что-то там читайте комменты

--- a/LISy/LISy/LISy.csproj
+++ b/LISy/LISy/LISy.csproj
@@ -86,6 +86,9 @@
     <Compile Include="AddDocument.xaml.cs">
       <DependentUpon>AddDocument.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AddLibrarian.xaml.cs">
+      <DependentUpon>AddLibrarian.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AddUserCard.xaml.cs">
       <DependentUpon>AddUserCard.xaml</DependentUpon>
     </Compile>
@@ -118,6 +121,10 @@
       <DependentUpon>WorkWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="AddDocument.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddLibrarian.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
