Крч вы там все сеттеры зделали протектад я убрал это потому что при модифае книжки я не мог ничего делать. Так теперь мы можем модифаеть книгу))))))) Осталость чтоб юзер мог выбирать и чекаутить книжку в рабочем окне И да мы не можем изменять количество копий при модифае потом что в классе книжка нет обькта копия

--- a/LISy/LISy/LISy.csproj
+++ b/LISy/LISy/LISy.csproj
@@ -95,6 +95,9 @@
     <Compile Include="BookingInfoWindow.xaml.cs">
       <DependentUpon>BookingInfoWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BookModifyWindow.xaml.cs">
+      <DependentUpon>BookModifyWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Users\ILibrarian.cs" />
     <Compile Include="Entities\Users\IPatron.cs" />
     <Compile Include="Helper.cs" />
@@ -133,6 +136,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="BookingInfoWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="BookModifyWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
