Changes in integrated tests

--- a/LISy/LISyTest/LISyTest.csproj
+++ b/LISy/LISyTest/LISyTest.csproj
@@ -55,7 +55,8 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Integrated\IntegratedTest.cs" />
+    <Compile Include="Integrated\Delivery1.cs" />
+    <Compile Include="Integrated\Delivery2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
