--- a/LISy/LISy/LISy.csproj
+++ b/LISy/LISy/LISy.csproj
@@ -105,6 +105,7 @@
       <DependentUpon>LibrarianWorkWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Managers\CredentialsManager.cs" />
+    <Compile Include="Managers\DataManagers\DatabaseDataManager.cs" />
     <Compile Include="Managers\DataManagers\DocumentsDataManager.cs" />
     <Compile Include="Managers\PatronDataManager.cs" />
     <Compile Include="Managers\DataManagers\UsersDataManager.cs" />
