--- a/.gitignore
+++ b/.gitignore
@@ -255,3 +255,7 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+UserLogic.psd
+UserLogic.png
+LISy Documentation.docx
+[Originals]/UserLogic.png
