Added get takable by id.

--- a/LISy/LISyTest/LISyTest.csproj
+++ b/LISy/LISyTest/LISyTest.csproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <Compile Include="Integrated\Delivery1.cs" />
     <Compile Include="Integrated\Delivery2.cs" />
+    <Compile Include="Integrated\Delivery3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
